change assumed shape of time series

--- a/sktime_neuro/examples/Motor_Imagery_Example.ipynb
+++ b/sktime_neuro/examples/Motor_Imagery_Example.ipynb
@@ -50,7 +50,9 @@
     ")\n",
     "\n",
     "raw = read_raw_bids(bids_path=bids_path, verbose=False)\n",
-    "data = raw.get_data()"
+    "\n",
+    "# mne assumes shape channels*timepoints;sktime assumes shape timepoints*channels\n",
+    "data = raw.get_data().transpose()"
    ]
   },
   {
@@ -78,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detrended_data = Detrender().fit_transform(pd.DataFrame(downsampled_data.transpose()))"
+    "detrended_data = Detrender().fit_transform(pd.DataFrame(downsampled_data))"
    ]
   },
   {
@@ -89,7 +91,7 @@
    "outputs": [],
    "source": [
     "filtered_data = FilterforSeries(l_freq=8, h_freq=16, sfreq=250).fit_transform(\n",
-    "    detrended_data.transpose()\n",
+    "    detrended_data\n",
     ")"
    ]
   },
